--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 /.idea
 *.pyc
 *.env
+.DS_Store
+.flaskenv
+*.pyo
+env/
+venv/
+.venv/
+env*
+dist/
+build/
+*.egg
+*.egg-info/
+_mailinglist
+.tox/
+.cache/
+.pytest_cache/
+.idea/
+docs/_build/
+.vscode
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+*,cover
